12.jan (db)
      - turn off "screen-shot" preference by default
      - add major and minor key signature names to transpose dialog
11.jan (lv)
      - fix import of MusicXML bracket line-end
10.jan (ws)
      - fixes for "insert measure" operations
      - New command line option "-n" to start with the "new score" wizard
        to create a new score, overriding preference settings for start mode.
9.jan (lv)
      - made import of MusicXML brackets position compatible with Ottava and Volta
      (ws)
      - fixed memory corruption during drag&drop
      - silently change old default sound font path from ":/data/piano1.sf2"
        to the new TimGM6mb.sf2 when reading preference settings
      - fix: right click on lower staff selects top staff
      - Removed shortcut Ctrl+Space for playback since Ctrl+Space is default
        shortcut of input method in many windows system, mostly multibytes
        languages in asia.
      - show new score dialog when start configured as "start with new score"
      (db)
      - copy edits for newly added strings
6.jan (ws)
      - first code for interval based transposition (incomplete)
      (la)
      - add code for update checking
5.jan (ws)
      - better pitch spelling during note input
      - start with reasonable sized navigator window
      - fix: key signature crash
      - fix: grace note spacing on multi-staves
      - fix: Delete part of tuplet corrupts file
4.jan (ws)
      - do not allow to remove time signature at tick zero.
      (la)
      - add external file to list languages (languages.xml)
3.jan (lv)
      - fix import of Gatti.xml
2.jan.2010 (db)
      - fix magnification steps
      - instruments.xml patch from barichd
31.dec (ws)
      - note tweaking: ontime/offtime properties
30.dec (ws)
      - redesign of navigator panel
      (lv)
      - fix MusicXML export of pedal (broken by r2494 sym.cpp changes)
29.dec (lv)
      - MusicXML support for multiple (beamed/chord) grace notes
      (ws)