@@ -1,3 +1,5 @@
+16.jan (la)
+      - add frequency preference for automatic update check
 12.jan (db)
       - turn off "screen-shot" preference by default
       - add major and minor key signature names to transpose dialog
